# CppPluginBasedFileAnalysis

version0/: build.sh  my_math.cpp  my_math.h  readme.md  run.sh  test.cpp
version0/demo0/: Cargo.toml
version0/demo0/src/: lib.rs
version1/: CMakeLists.txt  a.h  a1.cpp  a2.cpp  main.cpp  makefile  run.sh
version1/demo1/: Cargo.toml  build.rs
version1/demo1/src/: lib.rs
version2/: CMakeLists.txt  a2.cpp  main.cpp  run.sh
version4/: CMakeLists.txt
version4/demo4/: Cargo.toml
version4/demo4/src/: lib.rs
xplugin/: CMakeLists.txt  xdynamic.h  xexport.h  xplugin_instance.h  xplugin_manager.h
xplugin/src/: demo.cpp  xdynamic.cpp  xplugin_instance.cpp  xplugin_manager.cpp
xplugin/test/: PluginTest.cpp
